--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
  	<title>Homepage</title>
  </head>
  <body>
+ <center>
+ <img src="acme_0_60195.jpg">
  <p><h1>Welcome to the Homepage!</h1></p>
  <p><h3>Created December 19, 2018</h3></p>
  <p>Here is the first version of this page.</p>
+ <img src="new-g.gif">
+ </center>
  </body>
  </html> 
